# aiofauna

./: .gitignore  .prettierrc  .pylintrc  CHANGELOG.md  Dockerfile  LICENSE  Pipfile  README.md  README.rst  api.py  app.py  docker-compose.yml  docs.sh  main.py  mixins.py  models.py  package.json  pyproject.toml  requirements.txt  serverless.yml
.github/: CONTRIBUTE.yml  ISSUES.MD
.github/workflows/: test.yml
aiofauna/: __init__.py  __main__.py  api.py  application.py  asgi.py  cli.py  client.py  datastructures.py  deprecated.py  docs.py  errors.py  exceptions.py  fields.py  helpers.py  json.py  logging.py  markdown.py  meta.py  nodeenv.py  objects.py  odm.py  page.py  query.py  responses.py  router.py  server.py  templates.py  typedefs.py  utils.py
aiofauna/api/: openai.py  store.py
aiofauna/app/: __init__.py  application.py  helpers.py
aiofauna/cli/: __init__.py  build.py  curl.py  git.py  kill.py  vue.py
aiofauna/client/: api_client.py  fauna_client.py
aiofauna/data/: document.py  exceptions.py  json.py  odm.py
aiofauna/faunadb/: __init__.py  objects.py  query.py
aiofauna/llm/: __init__.py  llm.py  schemas.py
aiofauna/prisma/: __init__.py  __main__.py  _async_http.py  http_abstract.py  mypy.py
aiofauna/server/: __init__.py  asgi.py  docs.py  router.py  server.py
aiofauna/ssr/: __init__.py  renderer.py  ssr.py
aiofauna/streams/: __init__.py  eventctx.py
aiofauna/swagger_ui/: swagger-initializer.js  swagger-ui-bundle.js  swagger-ui-es-bundle-core.js  swagger-ui-es-bundle.js  swagger-ui-standalone-preset.js  swagger-ui.css  swagger-ui.js
app/: auto-imports.d.ts  components.d.ts  index.html  package-lock.json  package.json  uno.config.ts  vite.config.ts
docs/: aiofauna.client.rst  aiofauna.docs.rst  aiofauna.faunadb.page.rst  aiofauna.faunadb.query.rst  aiofauna.faunadb.rst  aiofauna.json.rst  aiofauna.markdown.rst  aiofauna.odm.rst  aiofauna.router.rst  aiofauna.server.rst  aiofauna.templates.rst  aiofauna.utils.rst  base.j2  conf.py  index.rst  modules.rst
example/: main.py
markdown/: index.md
md/: index.md
pages/: _base.j2  index.j2
scripts/: git.py  kill.py
spec/: openai.py  openai.yml  pinecone.yml
src/: __init__.py  functions.py  schema.py  service.py
static/: index.html
templates/: index.html  index.vue
tests/: test_meta.py
tools/: __init__.py
(+183 files in other folders)
