[tool.poetry]
name = "aiofauna"
version = "0.1.99"
description = "FaunaDB Full Stack Framework"
authors = ["Oscar Bahamonde <oscar.bahamonde.dev@gmail.com>"]
repository = "https://github.com/obahamonde/aiofauna"
readme = "README.md"
license = "MIT"



[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.8.4"
iso8601 = "^1.1.0"
aiohttp-sse = "^2.1.0"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
rich = "^13.4.2"

click = "^8.1.6"
gunicorn = "^21.2.0"
jinja2 = "^3.1.2"
pygments = {extras = ["linkify"], version = "^2.16.1"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
aiofauna = "aiofauna.__main__:main"